[package]
name = "snowflake-rust"
version = "0.2.0"
authors = ["wangchen <18511635784@163.com>"]
description = "'twitter' snowflakes."
repository = "https://github.com/bejens/snowflake.git"
readme = "README.md"
keywords = ["snowflake", "twitter", "id", "uid"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
